# libkc

./: .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: libkc-ci.yml
bench/: CMakeLists.txt
bench/async/: ParallelLoop.cpp  Utils.cpp
bench/core/: Enumerate.cpp  Range.cpp  Utils.cpp  Zip.cpp
bench/mem/: OwningPtr.cpp
src/: CMakeLists.txt
src/kc/: CMakeLists.txt
src/kc/async/: Acceptor.h  Context.h  Error.hpp  Future.hpp  Socket.h  TaskExecutor.h  TaskScheduler.cpp  TaskScheduler.hpp  ThreadPool.cpp  ThreadPool.hpp  Utils.cpp  Utils.hpp
src/kc/containers/: AtomicQueue.hpp  RingBuffer.hpp  ThreadSafeQueue.hpp
src/kc/core/: Clock.cpp  Clock.h  ConfigLoader.hpp  Countable.hpp  Enumerate.hpp  ErrorBase.hpp  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  Macros.h  Meta.hpp  Profiler.cpp  Profiler.h  Range.hpp  Scope.hpp  Singleton.hpp  String.cpp  String.h  Utils.hpp  Uuid.cpp  Uuid.h  Zip.hpp
src/kc/cv/: Image.h  stb.h  stb_write.h
src/kc/event/: Category.h  Containers.hpp  Error.h  Event.h  EventEmitter.cpp  EventEmitter.h  EventEngine.cpp  EventEngine.h  EventListener.h  EventManager.cpp  EventManager.hpp  EventObserver.h  EventProvider.cpp  EventProvider.h  EventWrapper.cpp  EventWrapper.hpp  fwd.h
src/kc/event2/: EventManager.cpp  EventManager.hpp  EventStorage.hpp  EventWrapper.hpp  fwd.h
src/kc/json/: Json.cpp  Json.h  JsonConfigLoader.hpp  Utils.hpp
src/kc/math/: Format.cpp  Format.h  Ray.cpp  Ray.h  Utils.cpp  Utils.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorBase.hpp
src/kc/mem/: LocalPtr.hpp  Mallocator.hpp  OwningPtr.hpp
src/kc/mem/allocators/: Allocator.hpp  Mallocator.hpp
src/kc/model/: Deserializable.h  Deserializable.hpp  MessageDeserializer.h  Model.h  Model.hpp  Serializable.h  Serializable.hpp
src/kc/model/generator/: main.cpp
src/kc/net/: AcceptorService.h  AcceptorService.hpp  Session.hpp
src/kc/parallel/: All.h  Buffer.hpp  Context.h  Core.h  Kernel.hpp
src/kc/prof/: Label.h  Profiler.cpp  Profiler.h  Timer.cpp  Timer.h  fwd.h
src/kc/service/: PeriodicService.cpp  PeriodicService.h  Service.cpp  Service.h  ServiceBase.h  ServiceManager.cpp  ServiceManager.h  ServiceThread.cpp  ServiceThread.h
src/kc/sig/: Signal.cpp  Signal.h  SignalHandler.h
src/modelgen/: CMakeLists.txt  Core.h  Generator.cpp  Generator.h  Language.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  main.cpp
src/modelgen/examples/: ExampleModel.kcm
src/modelgen/templates/: BaseModel.h
test/: CMakeLists.txt
test/async/: FutureTests.cpp  TaskSchedulerTests.cpp  ThreadPoolTests.cpp  UtilsTests.cpp
test/containers/: AtomicQueueTests.cpp  RingBufferTests.cpp  ThreadSafeQueueTests.cpp
test/core/: ConfigLoaderTests.cpp  CountableTests.cpp  EnumerateTests.cpp  RangeTests.cpp  ScopeTests.cpp  SingletonTests.cpp  StringTests.cpp  UtilsTests.cpp  UuidTests.cpp  ZipTests.cpp
test/event/: Event.h  EventEmitterTests.cpp  EventEngineTests.cpp  EventListenerTests.cpp  EventManagerTests.cpp  EventProviderTests.cpp  EventTests.cpp  EventWrapperTests.cpp
test/event2/: EventManagerTests.cpp
test/json/: JsonConfigLoaderTests.cpp  JsonTests.cpp  UtilsTests.cpp
test/math/: RayTests.cpp  UtilsTests.cpp  VectorTests.cpp
test/mem/: LocalPtrTests.cpp  OwningPtrTests.cpp
test/mocks/: EventObserverMock.hpp  FileSystemMock.hpp  ServiceMock.h  ServiceThreadMock.h
test/prof/: ProfilerTests.cpp
test/service/: ServiceManagerTests.cpp
